--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "my-notification-service",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "A Notification Service API built by NestJS.",
+  "author": {
+    "name": "elenh",
+    "email": "yisiwings@163.com"
+  },
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -24,9 +27,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.6",
+    "@nestjs/websockets": "^9.1.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
